Fix centering with text-align instead of flexbox
- Changed width from 100vw back to 100% to avoid viewport issues
- Added text-align: center to container for simple centering
- Removed flexbox properties that might cause conflicts
- This should properly center the image on mobile

--- a/css/hard-feelings-tacos.webflow.css
+++ b/css/hard-feelings-tacos.webflow.css
@@ -1414,6 +1414,8 @@
   padding: 0 !important;
   display: block !important;
   max-width: 100% !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
 
 .owners-inner-container {
@@ -2441,13 +2443,14 @@
   }
 
   .about-us-inner-container {
-    width: 100vw;
+    width: 100%;
     height: 600px;
     overflow: visible;
     margin-top: 80px;
     margin-left: 0;
     margin-right: 0;
     box-sizing: border-box;
+    text-align: center;
   }
 
   .aboutus-textcontainer.au-paragraph-one {
@@ -2465,6 +2468,8 @@
     padding: 0 !important;
     display: block !important;
     max-width: 100% !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
 
   .paragraph-two2.am-description {
@@ -2679,8 +2684,9 @@
     margin-top: 60px;
     margin-left: 0;
     margin-right: 0;
-    width: 100vw;
+    width: 100%;
     box-sizing: border-box;
+    text-align: center;
   }
 
   .aboutus-textcontainer.au-paragraph-one {
